<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_extra_large"
    android:paddingStart="@dimen/margin_extra_large"
    android:paddingRight="@dimen/margin_extra_large"
    android:paddingEnd="@dimen/margin_extra_large"
    android:layout_marginBottom="@dimen/margin_extra_large">

    <TextView
        style="@style/LoginTheme.TextLabel"
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_extra_large"
        android:textAlignment="viewStart"
        android:gravity="start"
        tools:text="@string/enter_phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/login_phone_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:tint="@color/login_input_icon_color"
            app:srcCompat="@drawable/ic_user_grey_24dp"/>

        <LinearLayout
            android:id="@+id/login_phone_label_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin_extra_large"
            android:focusable="true">

            <TextView
                style="@style/LoginTheme.InputLabelStatic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:gravity="start"
                android:text="@string/phone_number"/>

            <TextView
                style="@style/LoginTheme.TextLabel"
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:gravity="start"
                tools:text="10086"/>
        </LinearLayout>
    </LinearLayout>

    <com.plutonem.android.login.widgets.PLoginInputRow
        android:id="@+id/password_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_extra_extra_large"
        android:hint="@string/password"
        android:importantForAutofill="noExcludeDescendants"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:gravity="start"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/login_input_password_icon_color"
        app:pIconDrawable="@drawable/ic_lock_grey_24dp"
        tools:ignore="UnusedAttribute" >
    </com.plutonem.android.login.widgets.PLoginInputRow>

</LinearLayout>