<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_extra_large"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingEnd="@dimen/margin_extra_large"
    android:paddingStart="@dimen/margin_extra_large" >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label"
        style="@style/LoginTheme.TextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_extra_large"
        android:gravity="start"
        android:textAlignment="viewStart"
        tools:text="@string/enter_phone_plutonem" />


<!--    <TextView-->
<!--        android:id="@+id/label"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="@dimen/margin_extra_large"-->
<!--        android:layout_marginTop="@dimen/margin_extra_large"-->
<!--        android:layout_width="match_parent"-->
<!--        android:textAlignment="viewStart"-->
<!--        android:gravity="start"-->
<!--        tools:text="@string/enter_phone_plutonem"-->
<!--        style="@style/LoginTheme.TextLabel" >-->
<!--    </TextView>-->

    <com.plutonem.android.login.widgets.PNLoginInputRow
        android:id="@+id/login_phone_row"
        android:hint="@string/phone_number"
        android:imeOptions="actionNext"
        android:importantForAutofill="noExcludeDescendants"
        android:inputType="phone"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAlignment="viewStart"
        android:gravity="start"
        tools:ignore="UnusedAttribute" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/LoginTheme.TextLabel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_medium"
        android:gravity="center_vertical"
        android:text="@string/alternatively" />

<!--    <TextView-->
<!--        android:gravity="center_vertical"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_marginBottom="@dimen/margin_medium"-->
<!--        android:layout_marginTop="@dimen/margin_extra_large"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:text="@string/alternatively"-->
<!--        style="@style/LoginTheme.TextLabel" >-->
<!--    </TextView>-->

    <LinearLayout
        android:id="@+id/signup_phone_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_extra_large"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_medium"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:id="@+id/login_site_button_icon"
            style="@style/LoginTheme.TextLabel.Icon"
            android:importantForAccessibility="no"
            android:layout_height="@dimen/google_button_icon_sz"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_width="@dimen/google_button_icon_sz"
            app:srcCompat="@drawable/ic_domains_grey_24dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_site_button_text"
            style="@style/LoginTheme.Button.LoginOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/sign_up_instead" />

    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:id="@+id/signup_phone_button"-->
<!--        android:background="?attr/selectableItemBackground"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="@dimen/margin_extra_large"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:paddingBottom="@dimen/margin_medium"-->
<!--        android:paddingEnd="@dimen/margin_medium"-->
<!--        android:paddingTop="@dimen/margin_medium"-->
<!--        android:gravity="center_vertical"-->
<!--        tools:ignore="RtlSymmetry" >-->

<!--        <ImageView-->
<!--            android:id="@+id/login_site_button_icon"-->
<!--            android:importantForAccessibility="no"-->
<!--            android:layout_height="@dimen/google_button_icon_sz"-->
<!--            android:layout_marginEnd="@dimen/margin_medium"-->
<!--            android:layout_width="@dimen/google_button_icon_sz"-->
<!--            app:srcCompat="@drawable/ic_domains_grey_24dp" >-->
<!--        </ImageView>-->

<!--        <TextView-->
<!--            android:id="@+id/login_site_button_text"-->
<!--            android:gravity="center_vertical"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:text="@string/sign_up_instead"-->
<!--            style="@style/LoginTheme.Button.SignUp" >-->
<!--        </TextView>-->

<!--    </LinearLayout>-->

</LinearLayout>